--- a/index.html
+++ b/index.html
@@ -1,98 +1,242 @@
 <!DOCTYPE html>
 <html lang="en">
 <head>
-<meta charset="UTF-8">
-<meta name="viewport" content="width=device-width, initial-scale=1.0">
-<title>Theological Library</title>
-
-<!-- Firebase Compat -->
-<script src="https://www.gstatic.com/firebasejs/10.7.1/firebase-app-compat.js"></script>
-<script src="https://www.gstatic.com/firebasejs/10.7.1/firebase-auth-compat.js"></script>
-<script src="https://www.gstatic.com/firebasejs/10.7.1/firebase-firestore-compat.js"></script>
-
-<style>
-body{font-family:Poppins,Arial;background:#f1f5f9;margin:0;padding:0}
-.center{min-height:100vh;display:flex;align-items:center;justify-content:center}
-.card{background:#fff;padding:30px;border-radius:16px;box-shadow:0 10px 30px rgba(0,0,0,.1);width:100%;max-width:360px;text-align:center}
-.btn{background:#2563eb;color:#fff;border:none;padding:14px;border-radius:12px;width:100%;font-weight:600;cursor:pointer}
-.btn:active{transform:scale(.98)}
-.hidden{display:none}
-</style>
+    <meta charset="UTF-8">
+    <meta name="viewport" content="width=device-width, initial-scale=1.0, maximum-scale=1.0, user-scalable=no">
+    <title>Theological Library - Jesus is the Saviour</title>
+    <script src="https://www.gstatic.com/firebasejs/10.7.1/firebase-app-compat.js"></script>
+    <script src="https://www.gstatic.com/firebasejs/10.7.1/firebase-auth-compat.js"></script>
+    <script src="https://www.gstatic.com/firebasejs/10.7.1/firebase-firestore-compat.js"></script>
+    <link href="https://fonts.googleapis.com/css2?family=Poppins:wght@400;600;800&display=swap" rel="stylesheet">
+    <style>
+        :root { --blue: #3b82f6; --bg: #f0f4f8; }
+        body { font-family: 'Poppins', sans-serif; background: var(--bg); margin: 0; padding: 15px; color: #1e293b; }
+        .header-bar { display: flex; justify-content: space-between; align-items: center; margin-bottom: 20px; }
+        .clock-box { background: white; padding: 8px 15px; border-radius: 12px; font-weight: 600; font-size: 14px; box-shadow: 0 4px 10px rgba(0,0,0,0.03); color: var(--blue); }
+        .glass-card { background: white; border-radius: 20px; padding: 15px; box-shadow: 0 10px 30px rgba(0,0,0,0.05); margin-bottom: 20px; overflow: hidden; }
+        .dashboard-container { display: grid; grid-template-columns: repeat(auto-fit, minmax(300px, 1fr)); gap: 15px; align-items: start; }
+        .sliding-container { overflow: hidden; white-space: nowrap; width: 55%; position: relative; }
+        .sliding-text { display: inline-block; animation: scrollText 15s linear infinite; padding-right: 50px; font-weight: 600; }
+        @keyframes scrollText { 0% { transform: translateX(0); } 100% { transform: translateX(-100%); } }
+        .search-container { position: relative; margin-bottom: 20px; }
+        .search-box { width: 100%; padding: 12px; border-radius: 12px; border: 2px solid #e2e8f0; outline: none; }
+        .suggest-list { position: absolute; top: 55px; left: 0; width: 100%; background: white; border-radius: 12px; box-shadow: 0 10px 25px rgba(0,0,0,0.1); z-index: 1000; display: none; border: 1px solid #eee; }
+        .suggest-item { padding: 12px 15px; font-size: 13px; border-bottom: 1px solid #f1f5f9; cursor: pointer; }
+        .nav-tabs { display: flex; gap: 10px; margin-bottom: 20px; }
+        .tab-btn { padding: 10px 20px; border-radius: 12px; border: none; cursor: pointer; font-weight: 600; background: #e2e8f0; font-size: 14px; }
+        .tab-btn.active { background: var(--blue); color: white; }
+        .folder-grid { display: grid; grid-template-columns: repeat(auto-fit, minmax(100px, 1fr)); gap: 8px; }
+        .folder { background: #f8fafc; padding: 12px; border-radius: 12px; text-align: center; cursor: pointer; font-weight: 600; font-size: 11px; border: 1px solid #e2e8f0; }
+        .book-item { background: white; padding: 12px; border-radius: 12px; margin-bottom: 8px; border: 1px solid #f1f5f9; display: flex; justify-content: space-between; align-items: center; }
+        .btn-blue { background: var(--blue); color: white; border: none; padding: 8px 12px; border-radius: 8px; cursor: pointer; font-weight: 600; font-size: 11px; }
+        .hidden { display: none !important; }
+        #reader-overlay { position: fixed; inset: 0; background: white; z-index: 2000; display: flex; flex-direction: column; }
+        .login-field { width: 100%; padding: 10px; border-radius: 8px; border: 1px solid #ddd; margin-bottom: 12px; font-family: 'Poppins'; outline: none; }
+    </style>
 </head>
 <body>
 
-<!-- LOGIN -->
-<div id="loginScreen" class="center">
-  <div class="card">
-    <h2>Jesus is the Saviour</h2>
-    <p>Theological Student Library</p>
-    <button class="btn" onclick="googleLogin()">Login with Google</button>
-    <p id="status" style="font-size:12px;color:#555;margin-top:10px"></p>
-  </div>
+<div id="auth-screen">
+    <div class="glass-card" style="max-width:350px; margin: 50px auto; text-align:center;">
+        <h2 style="color:var(--blue); margin-bottom:5px;">Jesus is the Saviour</h2>
+        <p style="font-size:11px; color:#64748b; margin-bottom:20px;">Theological Student Library</p>
+        
+        <input type="text" id="login-coll-id" class="login-field" placeholder="College ID">
+        <input type="text" id="login-stud-id" class="login-field" placeholder="Student ID">
+        <input type="password" id="login-pass" class="login-field" placeholder="Password">
+
+        <button class="btn-blue" style="width:100%; padding:15px; font-size:14px;" onclick="handleCustomLogin()">Enter Library</button>
+        <div id="login-status" style="margin-top:15px; font-size:11px; color:#ef4444; font-weight:600;"></div>
+    </div>
 </div>
 
-<!-- DASHBOARD -->
-<div id="appScreen" class="hidden">
-  <div style="padding:20px">
-    <h3>Welcome</h3>
-    <p id="userName"></p>
-    <button class="btn" style="background:#ef4444" onclick="logout()">Logout</button>
-  </div>
+<div id="dashboard" class="hidden">
+    <div class="header-bar">
+        <div><span style="color:var(--blue); font-weight:800; font-size:12px;">JESUS IS THE SAVIOUR</span><h1 style="margin:0; font-size:18px;">Library</h1></div>
+        <div id="clock" class="clock-box">00:00:00</div>
+    </div>
+    <div class="nav-tabs">
+        <button id="t-lib" class="tab-btn active" onclick="switchMainTab('lib')">Library</button>
+        <button id="t-prof" class="tab-btn" onclick="switchMainTab('prof')">Profile</button>
+    </div>
+    <div id="lib-view">
+        <div class="search-container"><input type="text" id="libSearch" class="search-box" placeholder="🔍 Search library..." onkeyup="handleSuggest(this.value)"><div id="suggest-list" class="suggest-list"></div></div>
+        <div class="dashboard-container">
+            <div class="glass-card"><h3>🕒 Recent Uploads</h3><div id="recent-list"></div></div>
+            <div class="glass-card"><h3>🔥 Trending Now</h3><div id="trending-list"></div></div>
+            <div class="glass-card"><h3>📂 Categories</h3><div class="folder-grid">
+                <div class="folder" onclick="loadCat('Theology')">📖 Theology</div>
+                <div class="folder" onclick="loadCat('History')">⛪ History</div>
+                <div class="folder" onclick="loadCat('Mission')">🌍 Mission</div>
+                <div class="folder" onclick="loadCat('Acts')">📜 Acts</div>
+                <div class="folder" onclick="loadCat('Gospel')">✝️ Gospel</div>
+                <div class="folder" onclick="loadCat('Bible')">📘 Bible</div>
+            </div></div>
+        </div>
+    </div>
+    <div id="prof-view" class="hidden">
+        <div class="glass-card"><h3>Profile</h3><p id="p-name" style="font-weight:800; color:var(--blue);"></p><button class="btn-blue" style="background:#ef4444" onclick="logout()">Logout</button></div>
+        <div class="glass-card"><h3>📚 Borrowed Collection</h3><div id="borrowed-list"></div></div>
+    </div>
+    <div id="cat-view" class="hidden">
+        <button onclick="document.getElementById('cat-view').classList.add('hidden')" class="btn-blue" style="background:#64748b; margin-bottom:15px;">← Back</button>
+        <h3 id="cat-name"></h3><div id="cat-list"></div>
+    </div>
+</div>
+
+<div id="reader-overlay" class="hidden">
+    <div style="padding:10px; background:#1e293b; color:white; display:flex; justify-content:space-between; align-items:center;">
+        <span>Reader Mode</span>
+        <button onclick="closeReader()" style="background:red; color:white; border:none; padding:5px 12px; border-radius:6px;">Exit</button>
+    </div>
+    <iframe id="pdf-frame" src="" style="flex-grow:1; border:none; width:100%;"></iframe>
 </div>
 
 <script>
-/* ========== FIREBASE CONFIG ========== */
-const firebaseConfig = {
-  apiKey: "AIzaSyBBZ5Yvd7XH4lymNq2vIp-cwxPba55upWg",
-  authDomain: "student-library-4a4e7.firebaseapp.com",
-  projectId: "student-library-4a4e7",
-  storageBucket: "student-library-4a4e7.firebasestorage.app",
-  messagingSenderId: "827419448917",
-  appId: "1:827419448917:web:4b0d1084e6f1fe1b2566dc"
-};
+    const firebaseConfig = {
+      apiKey: "AIzaSyBBZ5Yvd7XH4lymNq2vIp-cwxPba55upWg",
+      authDomain: "theolib.in",
+      projectId: "student-library-4a4e7",
+      storageBucket: "student-library-4a4e7.firebasestorage.app",
+      messagingSenderId: "827419448917",
+      appId: "1:827419448917:web:4b0d1084e6f1fe1b2566dc"
+    };
+    firebase.initializeApp(firebaseConfig);
+    const db = firebase.firestore();
+    let allBooks = []; let currentUser = null; let sessionStart = null; let readStart = null; let readTask = "";
 
-firebase.initializeApp(firebaseConfig);
-const auth = firebase.auth();
+    setInterval(() => { document.getElementById('clock').innerText = new Date().toLocaleTimeString(); }, 1000);
 
-/* ========== GOOGLE LOGIN (POPUP) ========== */
-async function googleLogin(){
-  const provider = new firebase.auth.GoogleAuthProvider();
-  document.getElementById("status").innerText = "Opening Google login...";
+    async function handleCustomLogin() {
+        const collId = document.getElementById('login-coll-id').value;
+        const studId = document.getElementById('login-stud-id').value;
+        const pass = document.getElementById('login-pass').value;
+        const status = document.getElementById('login-status');
 
-  try{
-    const result = await auth.signInWithPopup(provider);
-    console.log("Logged in:", result.user.email);
-  }catch(err){
-    console.error(err);
+        if(!collId || !studId || !pass) { status.innerText = "Please fill all fields"; return; }
+        status.innerText = "Connecting...";
 
-    if(err.code === "auth/popup-blocked"){
-      document.getElementById("status").innerText = "Popup blocked! Please allow popups and try again.";
-    }else if(err.code === "auth/unauthorized-domain"){
-      document.getElementById("status").innerText = "This domain is not authorized in Firebase.";
-    }else{
-      document.getElementById("status").innerText = err.message;
+        const snap = await db.collection("users")
+            .where("collegeId", "==", collId)
+            .where("studentId", "==", studId)
+            .where("password", "==", pass)
+            .get();
+
+        if(!snap.empty) {
+            const userData = snap.docs[0].data();
+            currentUser = { uid: snap.docs[0].id, displayName: userData.fullName, collegeId: userData.collegeId };
+            sessionStart = Date.now();
+            document.getElementById('auth-screen').classList.add('hidden');
+            document.getElementById('dashboard').classList.remove('hidden');
+            document.getElementById('p-name').innerText = currentUser.displayName;
+            loadLib(); listenBorrows(); logAct("App Opened", "0s");
+        } else {
+            status.innerText = "Invalid ID or Password.";
+        }
     }
-  }
-}
 
-/* ========== AUTH STATE ========== */
-auth.onAuthStateChanged(user=>{
-  if(user){
-    document.getElementById("loginScreen").classList.add("hidden");
-    document.getElementById("appScreen").classList.remove("hidden");
-    document.getElementById("userName").innerText = 
-      "Logged in as: " + (user.displayName || user.email);
-  }else{
-    document.getElementById("loginScreen").classList.remove("hidden");
-    document.getElementById("appScreen").classList.add("hidden");
-  }
-});
+    function logAct(type, dur = "0s") {
+        if(currentUser) {
+            return db.collection("activity_logs").add({ 
+                userId: currentUser.uid, 
+                activityType: type, 
+                duration: dur, 
+                timestamp: new Date().toISOString() 
+            });
+        }
+    }
 
-/* ========== LOGOUT ========== */
-function logout(){
-  auth.signOut();
-}
+    function openPdf(id, s, task) {
+        readStart = Date.now(); readTask = task;
+        document.getElementById('pdf-frame').src = `public/${id}${s}.pdf#toolbar=0`;
+        document.getElementById('reader-overlay').classList.remove('hidden');
+    }
+
+    function closeReader() {
+        const dur = Math.round((Date.now() - readStart)/1000) + "s";
+        logAct(readTask, dur);
+        document.getElementById('reader-overlay').classList.add('hidden');
+        document.getElementById('pdf-frame').src = "";
+    }
+
+    function renderB(id, t) {
+        return `<div class="book-item">
+            <div class="sliding-container"><span class="sliding-text">${t || id}</span></div>
+            <div style="display:flex; gap:5px;"><button class="btn-blue" onclick="openPdf('${id}', '_read_online', 'Read Online')">Preview</button>
+            <button class="btn-blue" style="background:#eee;color:#333;" onclick="borrowB('${id}', '${t}')">Borrow</button></div></div>`;
+    }
+
+    function loadLib() {
+        db.collection("library_settings")
+          .where("allowedColleges", "array-contains", currentUser.collegeId)
+          .onSnapshot(snap => {
+            const rL = document.getElementById('recent-list'), tL = document.getElementById('trending-list');
+            rL.innerHTML = ""; tL.innerHTML = ""; allBooks = [];
+            snap.forEach(doc => {
+                const b = doc.data(); allBooks.push({id: doc.id, ...b});
+                if(b.recent) rL.innerHTML += renderB(doc.id, b.title);
+                if(b.trending) tL.innerHTML += renderB(doc.id, b.title);
+            });
+        });
+    }
+
+    function handleSuggest(q) {
+        const list = document.getElementById('suggest-list');
+        if (q.length < 2) { list.style.display = "none"; return; }
+        const filtered = allBooks.filter(b => (b.title||'').toLowerCase().includes(q.toLowerCase()));
+        list.innerHTML = "";
+        if (filtered.length > 0) {
+            list.style.display = "block";
+            filtered.forEach(b => {
+                const d = document.createElement('div'); d.className = 'suggest-item'; d.innerText = b.title;
+                d.onclick = () => { loadCat(b.category); list.style.display = "none"; };
+                list.appendChild(d);
+            });
+        }
+    }
+
+    async function loadCat(n) {
+        if(!n) return;
+        document.getElementById('cat-name').innerText = n;
+        document.getElementById('cat-view').classList.remove('hidden');
+        const snap = await db.collection("library_settings")
+                            .where("category", "==", n)
+                            .where("allowedColleges", "array-contains", currentUser.collegeId)
+                            .get();
+        const l = document.getElementById('cat-list'); l.innerHTML = "";
+        snap.forEach(doc => l.innerHTML += renderB(doc.id, doc.data().title));
+    }
+
+    function listenBorrows() {
+        db.collection("borrows").where("userId", "==", currentUser.uid).onSnapshot(snap => {
+            const list = document.getElementById('borrowed-list');
+            list.innerHTML = snap.empty ? "No borrowed books." : "";
+            snap.forEach(doc => {
+                const b = doc.data();
+                const days = 7 - Math.ceil(Math.abs(new Date() - new Date(b.borrowedAt)) / (1000 * 60 * 60 * 24));
+                list.innerHTML += `<div class="book-item"><span><b>${b.title}</b> (${days} days left)</span>
+                    <div style="display:flex; gap:5px;"><button class="btn-blue" onclick="openPdf('${b.bookId}', '', 'Borrowed Reading')">Open</button>
+                    <button class="btn-blue" style="background:#ef4444" onclick="db.collection('borrows').doc('${doc.id}').delete()">Return</button></div></div>`;
+            });
+        });
+    }
+
+    async function borrowB(id, t) { if(prompt("Code:") === "BORROW2026") await db.collection("borrows").add({ userId: currentUser.uid, bookId: id, title: t, borrowedAt: new Date().toISOString() }); }
+    
+    function switchMainTab(t) { 
+        document.getElementById('lib-view').classList.toggle('hidden', t !== 'lib'); 
+        document.getElementById('prof-view').classList.toggle('hidden', t !== 'prof'); 
+    }
+
+    async function logout() { 
+        if (sessionStart) {
+            const dur = Math.round((Date.now() - sessionStart) / 1000) + "s";
+            await logAct("App Closed", dur);
+            location.reload();
+        } else {
+            location.reload();
+        }
+    }
 </script>
-
 </body>
 </html>
